fixed no key in local storage issue, right-aligned sources

--- a/styles.css
+++ b/styles.css
@@ -55,19 +55,21 @@ input#searchBar{
 }
 
 a {
-    color:rgb(51,102,187);
+    color:rgb(81, 120, 187);
 }
 
 /* https://www.w3schools.com/howto/howto_js_popup.asp */
 /* Popup container */
 .popup {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: flex-end;
     cursor: pointer;
+    padding:2% 0 1% 0;
 }
 
 .popup:hover {
-    color:rgb(51,102,187);
+    color:rgb(81, 120, 187);
     text-decoration: underline;
 }
   
@@ -82,31 +84,31 @@ a {
     padding: 8px 8px 0 8px;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
-    left: 50%;
+    bottom: 75%;
+    right: 0%;
     margin-left: -30px;
 }
   
-  /* Popup arrow */
+/* Popup arrow */
 .popup .popuptext::after {
     content: "";
     position: absolute;
     top: 100%;
-    left: 10%;
+    right: 5%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
     border-color: #555 transparent transparent transparent;
 }
   
-  /* Toggle this class when clicking on the popup container (hide and show the popup) */
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
 .popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s
 }
   
-  /* Add animation (fade in the popup) */
+/* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
